added Healthy Ride data for comparison

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_parquet('./data/combined data/data.parquet')"
+    "df = pd.read_parquet('./data/POGOH/combined data/data.parquet')"
    ]
   },
   {
